added expired assignment cleaner + minor fixes
