# internal/controller/http/v1/user_controller.go
@@ -2,11 +2,13 @@ package v1
 
 import (
 	"avito_test_case/internal/dto"
+	my_errors "avito_test_case/internal/errors"
 	"avito_test_case/internal/service"
 	"avito_test_case/pkg/logger"
 	"context"
 	"encoding/csv"
 	"encoding/json"
+	"errors"
 	"github.com/go-chi/chi/v5"
 	"github.com/go-playground/validator/v10"
 	"net/http"
@@ -35,6 +37,8 @@ func NewUserController(handler *chi.Mux, s *service.PostgresAssignmentService, l
 // @Produce json
 // @Param input body dto.User true "User ID"
 // @Success 200 {object} dto.UserSegmentGet
+// @Failure 400 {object} dto.ErrorResponse
+// @Failure 500
 // @Router /user [get]
 func (c *userController) getAssignments(w http.ResponseWriter, r *http.Request) {
 	var u dto.User
@@ -44,12 +48,20 @@ func (c *userController) getAssignments(w http.ResponseWriter, r *http.Request) 
 		return
 	}
 	if err := validator.New().Struct(u); err != nil {
+		_ = json.NewEncoder(w).Encode(dto.NewErrorResponse(err))
 		http.Error(w, http.StatusText(400), 400)
 		return
 	}
 	var err error
 	var res dto.UserSegmentGet
 	if res, err = c.s.GetUserAssignments(context.TODO(), u.UserID); err != nil {
+		var noSuchUserError *my_errors.NoSuchUserError
+		if errors.As(err, &noSuchUserError) {
+			_ = json.NewEncoder(w).Encode(dto.NewErrorResponse(err))
+			http.Error(w, http.StatusText(400), 400)
+		} else {
+			http.Error(w, http.StatusText(500), 500)
+		}
 		return
 	}
 	w.Header().Set("Content-Type", "application/json")
@@ -68,6 +80,7 @@ func (c *userController) getAssignments(w http.ResponseWriter, r *http.Request) 
 // @Produce json
 // @Param input body dto.UserHistoryGet true "User ID with year and month to get history of"
 // @Success 200 {object} dto.UserHistory
+// @Failure 500
 // @Router /user/history [get]
 func (c *userController) getHistory(w http.ResponseWriter, r *http.Request) {
 	var u dto.UserHistoryGet
@@ -77,6 +90,7 @@ func (c *userController) getHistory(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	if err := validator.New().Struct(u); err != nil {
+		_ = json.NewEncoder(w).Encode(dto.NewErrorResponse(err))
 		http.Error(w, http.StatusText(400), 400)
 		return
 	}
